18.0.0  - removed coroutines module

17.0.0  - ADT API changes
            zpl_adt_inset_* -> zpl_adt_append_*
            zpl_adt_node now holds a parent field, methods no longer require a pointer to the parent
            methods are now documented
        - add zpl_thread_init_nowait (gaopeng)

16.1.1  - fix scientific notation parsing
16.1.0  - introduce ZPL_PARSER_DISABLE_ANALYSIS that disables extra parsing capabilities to offer better raw performance
            at a cost of lack of node metadata.
16.0.0  - introduce a new zpl_adt_get method for flexible data retrieval
            "a/b/c" navigates through objects "a" and "b" to get to "c"
            "arr/[foo=123]/bar" iterates over "arr" to find any object with param "foo" that matches the value "123", then gets its field called "bar"
            "arr/3" retrieves the 4th element in "arr"
            "arr/[apple]" retrieves the first element of value "apple" in "arr"
        - fix memory leak when parsing a json array (gaopeng)
        - add zpl_strntok (gaopeng)
        - add zpl_semaphore_trywait (gaopeng)

15.0.3  - fix zpl_sign call in math failing to compile
            on macos devices
15.0.2  - zpl_sign0 was introduced
15.0.1  - hashtable performance improvements
		- zpl_sign(0) returns 0
15.0.0  - Rework zpl ring buffer
		- various code improvements

14.1.7  - fix zpl_random_range_i64
		- set thread's is_running before we start a thread
14.1.6  - remove windows.h dependency for header part
14.1.5  - fix array append_at
14.1.4  - Fix win32 missing CRITICAL_SECTION definition if
		- ZPL_NO_WINDOWS_H is defined
14.1.0  - add hashtable map_mut method
14.0.1  - fix zpl_array_remove_at boundary bug
14.0.0  - heap memory allocator analysis

13.4.1  - adt optimizations
13.4.0  - new adt manipulation methods
13.3.3  - fix zpl_str_skip_literal bug
13.3.2  - escape strings in parser output
13.3.1  - number parsing improvements
13.3.0  - csv parse numbers
13.2.0  - hashtable _map function