@@ -1,4 +1,5 @@
 18.0.0  - removed coroutines module
+        - removed timer module
 
 17.0.0  - ADT API changes
             zpl_adt_inset_* -> zpl_adt_append_*
